# bellpepper-gadgets

./: .gitignore  .lychee.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ThirdPartyNotices.txt  deny.toml  rust-toolchain.toml
.cargo/: config  config.toml
.config/: nextest.toml
.github/workflows/: rust.yml
crates/bellpepper-ed25519/: Cargo.toml  README.md
crates/bellpepper-ed25519/src/: circuit.rs  curve.rs  field.rs  lib.rs
crates/bellpepper-emulated/: Cargo.toml
crates/bellpepper-emulated/src/: field_element.rs  field_hints.rs  field_ops.rs  util.rs
crates/bellpepper-sha512/src/: sha512.rs
crates/bls12381/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/bls12381/src/: e12.rs  e2.rs  e6.rs  fp.rs  lib.rs
crates/bls12381/src/curves/: g1.rs  g2.rs  mod.rs  pairing.rs  params.rs
crates/bls12381/src/fields/: e12.rs  e2.rs  e6.rs  fp.rs  fp12.rs  fp2.rs  fp6.rs  mod.rs  torus.rs
crates/chunk/: Cargo.toml
crates/chunk/examples/: chunk_add_nivc.rs  chunk_merkle_proving.rs  chunked_add.rs
crates/chunk/src/: error.rs  lib.rs  traits.rs
crates/chunk/tests/: gadget.rs  merkle.rs
crates/ed25519/: Cargo.toml  README.md
crates/ed25519/src/: circuit.rs  curve.rs  field.rs
crates/emulated/: Cargo.toml  README.md
crates/emulated/docs/: .gitignore  overflow.tex
crates/emulated/src/: field_element.rs  field_hints.rs  field_ops.rs  lib.rs  util.rs
crates/keccak/: Cargo.toml  README.md
crates/keccak/src/: lib.rs  uint64.rs
crates/keccak/tests/: gadget.rs
crates/merkle-aptos/: Cargo.toml
crates/merkle-aptos/src/: lib.rs
crates/merkle-inclusion/: Cargo.toml
crates/merkle-inclusion/src/: lib.rs  traits.rs  utils.rs
crates/merkle-inclusion/tests/: gadget.rs  lib.rs  utils.rs
crates/ripemd160/: Cargo.toml  README.md
crates/ripemd160/src/: lib.rs  ripemd160.rs  uint32.rs  util.rs
crates/sha1/: Cargo.toml  README.md
crates/sha1/src/: lib.rs  sha1.rs  util.rs
crates/sha512/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/sha512/src/: lib.rs  sha512.rs  uint64.rs
crates/uint64/: Cargo.toml  README.md
crates/uint64/src/: lib.rs
