[workspace]
resolver = "2"
members = [
    "crates/bls12381",
    "crates/emulated",
    "crates/ed25519",
    "crates/sha512",
    "crates/sha1",
    "crates/keccak",
    "crates/merkle-inclusion",
    "crates/chunk",
    "crates/uint64",
]

[workspace.package]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/lurk-lab/bellpepper-gadgets"
repository = "https://github.com/lurk-lab/bellpepper-gadgets"

[workspace.dependencies]
bellpepper-core = { version="0.4.0", default-features = false }
bellpepper = { version="0.4.1", default-features = false }
ff = "0.13.0"
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
rand = "0.8.5"
rand_core = "0.6.4"
rand_xorshift = "0.3.0"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
proptest = "1.4.0"

[profile.dev-ci]
inherits = "dev"
# By compiling dependencies with optimizations, performing tests gets much faster.
opt-level = 3
lto = "thin"
incremental = false
codegen-units = 16
