[package]
name = "bellpepper-bls12381"
version = "0.2.0"
edition = "2021"
authors = ["Gustavo <gustavo@wrinqle.net>"]
license.workspace=true
description = "Bellpepper circuit implementation of BLS12-381 pairing and curve operations"
documentation = "https://docs.rs/bellpepper-bls12381"
homepage.workspace = true
repository.workspace = true
rust-version = "1.66.1"


[dependencies]
bellpepper-core = { workspace = true }
ff = { workspace = true }
bellpepper-emulated = { version = "0.2.0", path = "../emulated" }
num-bigint = { workspace = true, features = ["rand"] }
num-integer = { workspace = true }
num-traits = { workspace = true}
rand = { workspace = true}
bls12_381 = { git = "https://github.com/wrinqle/bls12_381" }

[dev-dependencies]
expect-test = "1.4.1"
pasta_curves = "0.5.1"
