[package]
name = "bellpepper-chunk"
version = "0.1.0"
edition = "2021"
authors = ["Lurk Lab Engineering <engineering@lurk-lab.com>"]
license = "MIT OR Apache-2.0"
description = "Chunking pattern for circuits with accumulators and loops."
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bellpepper = { git = "https://github.com/lurk-lab/bellpepper", branch = "dev", default-features = false }
bellpepper-core = { git = "https://github.com/lurk-lab/bellpepper", branch = "dev", default-features = false }
ff = { workspace = true }
nova = { git = "https://github.com/lurk-lab/arecibo", branch = "dev", package = "arecibo" }
thiserror = "1.0.57"

[dev-dependencies]
flate2 = "1.0.28"
tracing-subscriber =  { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
bincode = "1.3.3"
halo2curves = { version = "0.6.0", features = ["bits", "derive_serde"] }
tracing-texray = "0.2.0"

