[package]
name = "bellpepper-chunk"
version = "0.1.0"
rust-version = "1.66.1"
edition = "2021"
authors = ["Lurk Lab Engineering <engineering@lurk-lab.com>"]
license.workspace=true
description = "Chunking pattern for circuits with accumulators and loops."
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bellpepper = { workspace = true }
bellpepper-core = { workspace = true, default-features = false}
ff = { workspace = true }
thiserror = "1.0.57"
getset = "0.1.2"

[dev-dependencies]
arecibo = { git = "https://github.com/lurk-lab/arecibo", branch = "dev", package = "arecibo" }
bincode = "1.3.3"
bitvec = "1.0.1"
halo2curves = { version = "0.6.0", features = ["bits", "derive_serde"] }
paste = "1.0.14"
tiny-keccak = {  version = "2.0.2", features = ["sha3"] }
tracing-subscriber =  { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tracing-texray = "0.2.0"
