[package]
name = "bellpepper-ed25519"
version = "0.2.0"
edition = "2021"
authors = ["Saravanan Vijayakumaran <sarva@ee.iitb.ac.in>"]
license = "MIT OR Apache-2.0"
description = "Ed25519 curve operations using the bellperson-emulated library"
documentation = "https://docs.rs/bellpepper-ed25519"
homepage.workspace = true
repository.workspace = true


[dependencies]
bellpepper-core = { workspace = true }
bellpepper = { workspace = true }
ff = { workspace = true }
bellpepper-emulated = { version = "0.2.0", path = "../emulated" }
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
rand = "0.8.5"

[dev-dependencies]
pasta_curves = "0.5.1"
