[package]
name = "bellpepper-ed25519"
version = "0.2.0"
edition = "2021"
authors = ["Saravanan Vijayakumaran <sarva@ee.iitb.ac.in>"]
license.workspace=true
description = "Ed25519 curve operations using the bellperson-emulated library"
documentation = "https://docs.rs/bellpepper-ed25519"
homepage.workspace = true
repository.workspace = true
rust-version = "1.66"

[dependencies]
bellpepper-core = { workspace = true }
ff = { workspace = true }
bellpepper-emulated = { version = "0.2.0", path = "../emulated" }
num-bigint = { workspace = true, features = ["rand"] }
num-integer = { workspace = true}
num-traits = { workspace = true}
rand = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# see https://github.com/rust-random/rand/pull/948
getrandom = { version = "0.2.0", default-features = false, features = ["js"] }

[dev-dependencies]
pasta_curves = { workspace = true }
bellpepper = { workspace = true }