[package]
name = "bellpepper-emulated"
version = "0.2.0"
edition = "2021"
authors = ["Saravanan Vijayakumaran <sarva@ee.iitb.ac.in>"]
license.workspace=true
description = "Nonnative arithmetic library using bellpepper inspired by the emulated package in Gnark"
documentation = "https://docs.rs/bellpepper-emulated"
rust-version = "1.66"
homepage.workspace = true
repository.workspace = true

[dependencies]
bellpepper-core = { workspace = true }
ff = { workspace = true }
num-bigint = { workspace = true, features = ["rand"] }
num-traits = { workspace = true }

[dev-dependencies]
pasta_curves = { workspace = true }
rand = { workspace = true }
