[package]
name = "bellpepper-keccak"
version = "0.1.0"
edition = "2021"
authors = ["Lurk Lab Engineering <engineering@lurk-lab.com>", "Zatoichi Labs <admin@zatoichi-labs.com>"]
license = "MIT OR Apache-2.0"
description = "Keccak  using bellpepper"
documentation = "https://docs.rs/bellpepper-keccak"
homepage.workspace = true
repository.workspace = true
rust-version = "1.66.1"

[dependencies]
ff = { workspace = true }
bellpepper-core = { workspace = true }

[dev-dependencies]
bitvec = "1.0.1"
bls12_381 = "0.8.0"
libsecp256k1 = "0.7"
pairing = "0.23.0"
proptest = "1.4.0"
tiny-keccak = { version = "2.0", features = ["keccak","sha3"] }
hex = "0.4.3"
