[package]
name = "bellpepper-merkle-aptos"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { workspace = true }
bellpepper-core = { workspace = true }
bellpepper = { workspace = true }
