[package]
name = "bellpepper-sha1"
version = "0.1.0"
edition = "2021"
authors = ["Saravanan Vijayakumaran <sarva@ee.iitb.ac.in>"]
license = "MIT OR Apache-2.0"

[dependencies]
bellpepper-core = { workspace = true }
bellpepper = { workspace = true }
ff = { workspace = true }

[dev-dependencies]
pasta_curves = { workspace = true }
hex-literal = "0.4.1"
rand_core = "0.6.4"
rand_xorshift = "0.3.0"
sha1 = "0.10.5"
