[package]
name = "bellpepper-sha512"
version = "0.2.0"
edition = "2021"
authors = ["Varun Thakore <vrnthakore@gmail.com>"]
description = "R1CS circuit for SHA-512 hash function"
license = "MIT OR Apache-2.0"
homepage.workspace = true
repository.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellpepper-core = { workspace = true }
bellpepper = { workspace = true }
ff = { workspace = true }


[dev-dependencies]
blstrs = "0.7.0"
rand = "0.8"
hex-literal = "0.4.1"
rand_core = "0.6.4"
rand_xorshift = "0.3.0"
sha2 = "0.10.6"
