[package]
name = "bellpepper-sha512"
version = "0.2.0"
edition = "2021"
authors = ["Varun Thakore <vrnthakore@gmail.com>"]
description = "R1CS circuit for SHA-512 hash function"
license = "MIT OR Apache-2.0"
rust-version = "1.66"
homepage.workspace = true
repository.workspace = true

[dependencies]
bellpepper-core = { workspace = true }
bellpepper = { workspace = true }
ff = { workspace = true }
proptest = "1.4.0"

[dev-dependencies]
blstrs = "0.7.0"
bitvec = "1.0.1"
rand = { workspace = true }
hex-literal = "0.4.1"
rand_core = { workspace = true }
rand_xorshift = { workspace = true }
sha2 = "0.10.6"
hex = "0.4.3"
